criado e complementado componente react

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.2.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
